applications/filebrowser-quantum/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser
  namespace: cloud
spec:
  parentRefs:
    - name: gateway-external
      namespace: network
      sectionName: https
  hostnames:
    - files.saleem.us
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: filebrowser-quantum
          port: 80
          weight: 1
